<resources>
    <string name="app_name">Займы</string>
    <string name="name_field_edit_text">Введите ваш логин</string>
    <string name="password_field_edit_text">Введите ваш пароль</string>
    <string name="first_name_field_edit_text">Введите ваше имя</string>
    <string name="last_name_field_edit_text">Введите вашу фамилию</string>
    <string name="phone_number_field_edit_text">Введите ваш номер телефона</string>
    <string name="amount_field_edit_text">Введите желаемую сумму займа</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="skip_registration_button">У меня уже есть аккаунт!</string>
    <string name="registration_success">Аккаунт %1$s успешно зарегистрирован!</string>
    <string name="login_button">Войти</string>
    <string name="send_request_button">Отправить заявку</string>
    <string name="user">пользователь</string>
    <string name="admin">администратор</string>
    <string name="approved">Одобрена</string>
    <string name="registered">Зарегистрирована</string>
    <string name="rejected">Отклонена</string>
    <string name="http_exception_400">Пользователь с таким именем уже существует</string>
    <string name="http_exception_401">Сначала Вам необходимо авторизоваться</string>
    <string name="http_exception_403">Данное действие недоступно</string>
    <string name="http_exception_404">Неверно введен логин или пароль</string>
    <string name="http_exception_other_client">К сожалению, произошла ошибка при взаимодействии с сервером:(</string>
    <string name="http_exception_other_server">К сожалению, произошла ошибка на сервере:(</string>
    <string name="http_exception_other">К сожалению, произошла ошибка при передаче данных:(</string>
    <string name="socket_timeout_exception">Плохое соединение с сервером, проверьте подключение к интернету и повторите попытку</string>
    <string name="unknown_host_exception">Отсутствует подключение к интернету</string>
    <string name="input_output_exception">К сожалению, произошла локальная ошибка:(</string>
    <string name="exception_other">К сожалению, произошла ошибка:(</string>
    <string name="amount_is_not_valid">Введенная сумма выше максимально допустимой</string>
    <string name="some_fields_are_empty">Заполните все поля!</string>
    <string name="loan_details">Детали заявки</string>
    <string name="information_details_approved_text_view">"Поздравляем! Ваша заявка на займ одобрена, вы можете получить выплату в любом удобном для Вас филиале организации, либо безналичным способом заполнив специальную форму в нашем приложений. "</string>
    <string name="information_details_rejected_text_view">К сожалению, Ваша заявка на займ отклонена.</string>
    <string name="information_details_registered_text_view">Ваша заявка пока находится на рассмотрении, вы можете отслеживать ее статус в личном кабинете.</string>
    <string name="information_result_text_view">Ваша заявка на займ %1$d рублей зарегистрирована под номером №%2$d! Ее статус вы можете отслеживать в личном кабинете.</string>
    <string name="amount_loan_text_view">Сумма: %1$d руб.</string>
    <string name="first_name_loan_text_view">Имя: %1$s</string>
    <string name="last_name_loan_text_view">Фамилия: %1$s</string>
    <string name="id_loan_text_view">Заявка №%1$d</string>
    <string name="state_loan_text_view">Статус заявки: %1$s</string>
    <string name="date_loan_text_view">Дата оформления заявки: %1$s</string>
    <string name="percent_loan_text_view">Ставка: %1$s %%/день</string>
    <string name="period_loan_text_view">Срок: %1$s дней</string>
    <string name="time_with_2_args_text_view">"Дата подачи заявки: %1$s \nВремя: %2$s"</string>
    <string name="time_with_1_arg_text_view">Время подачи заявки: %1$s</string>
    <string name="loan_conditions_text_view">Предоставляемые условия займа:</string>
    <string name="loan_application">Заявка на займ</string>
    <string name="max_amount_create_text_view">Максимальная сумма: %1$s руб.</string>
    <string name="return_to_personal_area_button">Вернуться в личный кабинет</string>
    <string name="authorized_user_name_text_view">Вы авторизованы, как %1$s</string>
    <string name="personal_area">Личный кабинет</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="create_loan_button">Оформить заявку на займ</string>
    <string name="update_loans_button">Обновить информацию</string>
    <string name="loans_history_text_view">История займов:</string>
    <string name="instruction_help_text_view">Спасибо, что пользуетесь нашими услугами, мы это очень ценим!! В личном кабинете вы можете посмотреть текущую историю займов, а также подать заявку на займ, нажав на соответствующую кнопку. Также на верхней панели находятся кнопки для выхода из учетной записи, показа этой инструкции и переключения языка приложения. Успехов Вам!</string>
    <string name="ok_help_button">Все понятно!</string>
    <string name="language_menu_item">Язык</string>
    <string name="russian_language_menu_item">Русский</string>
    <string name="english_language_menu_item">Английский</string>
    <string name="logout_menu_item">Выйти из учетной записи</string>
    <string name="logout_dialog_fragment_text_view">Вы действительно хотите выйти из учетной записи?</string>
    <string name="yes_logout_dialog_button">Да</string>
    <string name="no_logout_dialog_button">Нет</string>
    <string name="help_menu_item">Помощь</string>
    <string name="variable_is_not_initialized">К сожалению произошла ошибка:( Пожалуйста вернитесь назад и повторите действие</string>
</resources>