<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/authorizedUserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:text="Вы авторизированы, как вфывыфыв" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createLoanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/create_loan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorizedUserNameTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateLoansButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/update_loans_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createLoanButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loansHistoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/loans_history_text_view"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>